--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "App to store notes",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha server/**/*.test.js",
+    "test-watch": "nodemon --exec \"npm test\""
   },
   "author": "moser.sts",
   "license": "ISC",
@@ -13,5 +14,11 @@
     "express": "^4.16.3",
     "mongodb": "^3.0.10",
     "mongoose": "^4.13.14"
+  },
+  "devDependencies": {
+    "expect": "^23.1.0",
+    "mocha": "^5.2.0",
+    "nodemon": "^1.17.5",
+    "supertest": "^3.1.0"
   }
 }
