--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "app.js",
   "scripts": {
     "test": "mocha server/**/*.test.js",
-    "test-watch": "nodemon --exec \"npm test\""
+    "test-watch": "nodemon --exec \"npm test\"",
+    "start": "node server/server.js"
+  },
+  "engines": {
+    "node": "8.11.3"
   },
   "author": "moser.sts",
   "license": "ISC",
