--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "export NODE_ENV=test && mocha server/**/*.test.js --exit",
+    "test-coverage": "nyc --reporter=lcov --reporter=text-summary npm test",
     "test-watch": "nodemon --exec \"npm test\"",
     "start": "node server/server.js"
   },
@@ -29,6 +30,7 @@
     "expect": "^23.6.0",
     "mocha": "^5.2.0",
     "nodemon": "^1.17.5",
+    "nyc": "^14.1.1",
     "supertest": "^3.1.0"
   }
 }
