--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "export NODE_ENV=test && mocha server/**/*.test.js --exit",
     "test-coverage": "nyc --reporter=lcov --reporter=text-summary npm test",
     "test-watch": "nodemon --exec \"npm test\"",
-    "start": "node server/server.js"
+    "start": "node server/server.js",
+    "start:watch": "nodemon --watch server server/server.js"
   },
   "engines": {
     "node": "8.11.3",
