Improve sonar config

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,7 +7,8 @@ sonar.projectVersion=1.0
 # This property is optional if sonar.modules is set. 
 sonar.sources=server/
 sonar.language=js
-#sonar.tests=server/tests/
+sonar.tests=server/tests/
+sonar.exclusions=servet/config/*.js
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
  
 # Encoding of the source code. Default is default system encoding
