--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,7 +8,7 @@ sonar.projectVersion=1.0
 sonar.sources=server/
 sonar.language=js
 sonar.tests=server/tests/
-sonar.exclusions=servet/config/*.js
+#sonar.exclusions=servet/config/*.js
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
  
 # Encoding of the source code. Default is default system encoding
