--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,7 @@
                 "--timeout",
                 "999999",
                 "--colors",
-                "${workspaceFolder}/server/**/*.test.js"
+                "${workspaceFolder}/src/**/*.test.js"
             ],
             "internalConsoleOptions": "openOnSessionStart",
             "env": {
