--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "App to store notes",
   "main": "app.js",
   "scripts": {
-    "test": "export NODE_ENV=test && mocha server/**/*.test.js --exit",
+    "test": "export NODE_ENV=test && mocha test/**/*.test.js --exit",
     "test-coverage": "nyc --reporter=lcov --reporter=text-summary npm test",
     "test-watch": "nodemon --exec \"npm test\"",
-    "start": "node server/server.js",
-    "start:watch": "nodemon --watch server server/server.js"
+    "start": "node src/server.js",
+    "start:watch": "nodemon --watch src src/server.js"
   },
   "engines": {
     "node": "8.11.3",
