--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,10 +5,9 @@ sonar.projectVersion=1.0
  
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 # This property is optional if sonar.modules is set. 
-sonar.sources=server/
+sonar.sources=src/
 sonar.language=js
-sonar.tests=server/tests/
-#sonar.exclusions=servet/config/*.js
+sonar.exclusions=src/config/config.js
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
  
 # Encoding of the source code. Default is default system encoding
