--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mocha": "^5.2.0",
     "nodemon": "^1.17.5",
     "nyc": "^14.1.1",
+    "sinon": "^7.5.0",
     "supertest": "^3.1.0"
   }
 }
