--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "App to store notes",
   "main": "app.js",
   "scripts": {
-    "test": "export NODE_ENV=test && mocha test/**/*.test.js --exit",
+    "test": "export NODE_ENV=test && mocha 'test/**/*.test.js' --exit",
     "test-coverage": "nyc --reporter=lcov --reporter=text-summary npm test",
     "test-watch": "nodemon --exec \"npm test\"",
     "start": "node src/server.js",
