--- a/package.json
+++ b/package.json
@@ -29,11 +29,20 @@
     "validator": "^10.11.0"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.6.0",
+    "@typescript-eslint/parser": "^2.6.0",
+    "eslint": "^6.6.0",
+    "eslint-config-prettier": "^6.5.0",
+    "eslint-plugin-prettier": "^3.1.1",
     "expect": "^24.0.0",
     "mocha": "^5.2.0",
     "nodemon": "^1.17.5",
     "nyc": "^14.1.1",
+    "prettier": "^1.18.2",
     "sinon": "^7.5.0",
-    "supertest": "^3.1.0"
+    "supertest": "^3.1.0",
+    "ts-node": "^8.4.1",
+    "ts-node-dev": "^1.0.0-pre.44",
+    "typescript": "^3.6.4"
   }
 }
