--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.11",
-    "mongoose": "^5.7.5",
     "mongodb": "^3.3.3",
+    "mongoose": "^5.7.5",
     "validator": "^10.11.0"
   },
   "devDependencies": {
+    "@types/node": "^12.12.5",
+    "@types/mongoose": "^5.5.28",
     "@typescript-eslint/eslint-plugin": "^2.6.0",
     "@typescript-eslint/parser": "^2.6.0",
     "eslint": "^6.6.0",
