--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "export NODE_ENV=test && mocha 'test/**/*.test.js' --exit",
     "test-coverage": "nyc --reporter=lcov --reporter=text-summary npm test",
     "test-watch": "nodemon --exec \"npm test\"",
+    "build": "rm -rf dist && tsc",
     "start": "node src/server.js",
     "start:watch": "nodemon --watch src src/server.js"
   },
