Migrate config to TS

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,8 @@
 		"strictNullChecks": true,
 		"alwaysStrict": true,
 		"noUnusedLocals": true,
+		"moduleResolution": "node",
+		"resolveJsonModule": true,
     "noUnusedParameters": true,
     "pretty": true,
 		"typeRoots": [
