--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,11 +1,11 @@
 {
     "development": {
-        "PORT": 3000,
+        "PORT": "3000",
         "MONGODB_URI": "mongodb://localhost:27017/TodoApp",
         "JWT_SECRET": "qQDdj6Eawo3I1YUc0ntg"
     },
     "test": {
-        "PORT": 3000,
+        "PORT": "3000",
         "MONGODB_URI": "mongodb://localhost:27017/TodoAppTest",
         "JWT_SECRET": "zCGWgdEJRaaICBsblThB"
     }
