Add extra trigger

--- a/.github/workflows/synkbot-merge.yml
+++ b/.github/workflows/synkbot-merge.yml
@@ -1,13 +1,12 @@
 name: Auto merge
 
 on:
+  status:
+
   push:
     branches-ignore:
       - master
       
-  check_suite:
-    types:
-      - completed
 jobs:
   auto-merge:
     name: Auto merge
