--- a/.github/workflows/synkbot-merge.yml
+++ b/.github/workflows/synkbot-merge.yml
@@ -5,9 +5,7 @@ on:
     branches-ignore:
       - master
       
-  check_suite:
-    types:
-      - completed
+  status:
 jobs:
   auto-merge:
     name: Auto merge
