--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.11", 
-    "snyk": "^1.316.0"
+    "snyk": "^1.316.0",
     "mongoose": "5.8.11",
     "mongodb": "3.5.4",
     "validator": "^10.11.0"
