--- a/package.json
+++ b/package.json
@@ -19,17 +19,17 @@
   "author": "moser.sts",
   "license": "ISC",
   "dependencies": {
-    "@snyk/nodejs-runtime-agent": "^1.46.1",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.18.3",
-    "crypto-js": "^3.2.1",
-    "express": "^4.17.1",
-    "jsonwebtoken": "^8.3.0",
-    "lodash": "^4.17.11", 
-    "snyk": "^1.316.0",
+    "@snyk/nodejs-runtime-agent": "1.46.1",
+    "bcryptjs": "2.4.3",
+    "body-parser": "1.18.3",
+    "crypto-js": "3.2.1",
+    "express": "4.17.1",
+    "jsonwebtoken": "8.3.0",
+    "lodash": "4.17.11",
+    "snyk": "1.316.1",
     "mongoose": "5.8.11",
     "mongodb": "3.5.4",
-    "validator": "^10.11.0"
+    "validator": "10.11.0"
   },
   "devDependencies": {
     "expect": "^24.0.0",
