Use doc example to trigger

--- a/.github/workflows/synkbot-merge.yml
+++ b/.github/workflows/synkbot-merge.yml
@@ -2,7 +2,18 @@ name: Auto merge
 
 on:
   check_suite:
-    types: [rerequested, completed]
+    types:
+      - completed
+  pull_request:
+    types:
+      - edited
+      - labeled
+      - opened
+      - ready_for_review
+      - reopened
+      - synchronize
+      - unlabeled
+      - unlocked
 
 jobs:
   auto-merge:
