--- a/.github/workflows/synkbot-merge.yml
+++ b/.github/workflows/synkbot-merge.yml
@@ -1,27 +1,31 @@
-name: Auto merge
-
+name: automerge
 on:
+  pull_request:
+    types:
+      - labeled
+      - unlabeled
+      - synchronize
+      - opened
+      - edited
+      - ready_for_review
+      - reopened
+      - unlocked
+  pull_request_review:
+    types:
+      - submitted
   check_suite:
     types:
       - completed
-  pull_request:
-    types:
-      - edited
-      - labeled
-      - opened
-      - ready_for_review
-      - reopened
-      - synchronize
-      - unlabeled
-      - unlocked
-
+  status: {}
 jobs:
-  auto-merge:
-    name: Auto merge
+  automerge:
     runs-on: ubuntu-latest
     steps:
-      - name: Snyk auto merge
-        uses: ridedott/merge-me-action@master
-        with:
-          GITHUB_LOGIN: snyk-bot
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: automerge
+        uses: "pascalgn/automerge-action@7ab42e888a333bf77ce865bc84fedc6a365a3548"
+        env:
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          MERGE_LABELS: ""
+          MERGE_RETRIES: "6"
+          MERGE_RETRY_SLEEP: "10000"
+          MERGE_DELETE_BRANCH: true
