--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,24 +11,18 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     services:
       mongodb:
         image: mongo:4.0
         ports:
           - "27017:27017"
-
-    strategy:
-      matrix:
-        node-version: [10.x]
-
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js 8.x
       uses: actions/setup-node@v1
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: 8.x
     - run: npm ci
     - run: npm run build --if-present
     - run: npm run test-coverage
@@ -37,15 +31,13 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        
-  merge-me:
-    name: Merge me!
-    needs:
-      - build
+  deploy:
+    if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     steps:
-      - name: Merge me!
-        uses: ridedott/merge-me-action@master
+      - uses: actions/checkout@v2
+      - uses: akhileshns/heroku-deploy@v3.6.8 
         with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITHUB_LOGIN: snyk-bot
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: moser-ss-todo-api 
+          heroku_email: ${{secrets.HEROKU_ACCOUNT}}
