--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "prepare": "npm run snyk-protect"
   },
   "engines": {
-    "node": "8.11.3",
-    "npm": "6.4.1"
+    "node": "14",
+    "npm": "7"
   },
   "author": "moser.sts",
   "license": "ISC",
@@ -26,9 +26,9 @@
     "express": "4.17.1",
     "jsonwebtoken": "8.5.1",
     "lodash": "4.17.20",
-    "snyk": "1.419.1",
-    "mongoose": "5.9.15",
     "mongodb": "3.6.2",
+    "mongoose": "5.9.15",
+    "snyk": "^1.430.0",
     "validator": "10.11.0"
   },
   "devDependencies": {
