--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,7 @@
                 "--timeout",
                 "999999",
                 "--colors",
-                "${workspaceFolder}/src/**/*.test.js"
+                "${workspaceFolder}/test/**/*.test.js"
             ],
             "internalConsoleOptions": "openOnSessionStart",
             "env": {
@@ -27,7 +27,7 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
-            "program": "${workspaceFolder}/app.js"
+            "program": "${workspaceFolder}/src/server.js"
         }
     ]
 }
